[gd_scene load_steps=15 format=3 uid="uid://csvff2hw0u8w3"]

[ext_resource type="Script" uid="uid://ck361t0xnboi0" path="res://scenes/screen_thanks.gd" id="1_qfktu"]
[ext_resource type="Texture2D" uid="uid://bafrbsn0lik63" path="res://sadx out/ad_back_c.webp" id="2_sp1et"]
[ext_resource type="FontFile" uid="uid://bqfgjjocebx3" path="res://sadx out/font/Roboto-Italic-VariableFont_wdth,wght.ttf" id="3_hm3yv"]
[ext_resource type="AudioStream" uid="uid://db3h750b5xmis" path="res://sadx out/bgm/continue.ogg" id="4_q85ae"]
[ext_resource type="FontFile" uid="uid://drsl1e4j42tno" path="res://sadx out/font/Impress BT.ttf" id="5_q85ae"]
[ext_resource type="PackedScene" uid="uid://cykomhofgiy7e" path="res://components/button_dialog.tscn" id="6_8j7ec"]
[ext_resource type="PackedScene" uid="uid://b0d4sp4tmo32o" path="res://components/circle_button.tscn" id="7_fboau"]

[sub_resource type="Gradient" id="Gradient_l1mpm"]
offsets = PackedFloat32Array(0, 0.746094)
colors = PackedColorArray(0, 0.529688, 0.0993163, 1, 0, 0.439216, 0.0823529, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1rv5c"]
gradient = SubResource("Gradient_l1mpm")

[sub_resource type="FontVariation" id="FontVariation_ck2tf"]
base_font = ExtResource("3_hm3yv")
variation_opentype = {
2003072104: 100,
2003265652: 900
}
variation_embolden = 0.3
variation_transform = Transform2D(1.1, 0, 0, 1, 0, 0)
spacing_glyph = 2

[sub_resource type="LabelSettings" id="LabelSettings_3bjj2"]
font = SubResource("FontVariation_ck2tf")
font_size = 30
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsh5y"]
bg_color = Color(0.0745098, 0.447059, 0.815686, 0.411765)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="FontVariation" id="FontVariation_uifhk"]
base_font = ExtResource("5_q85ae")

[sub_resource type="LabelSettings" id="LabelSettings_sp1et"]
font = SubResource("FontVariation_uifhk")
font_size = 22
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.560784)

[node name="ScreenTest" type="Control" node_paths=PackedStringArray("bg")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qfktu")
bg = NodePath("BG")
bg_fades = 1

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sp1et")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 88.0
grow_horizontal = 2
texture = SubResource("GradientTexture1D_1rv5c")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Thanks for playing!"
label_settings = SubResource("LabelSettings_3bjj2")
vertical_alignment = 1

[node name="AudioMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_q85ae")
autoplay = true
bus = &"Music"

[node name="AudioVoice" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 96.0
offset_right = -56.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tsh5y")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(504, 216)
layout_mode = 2
size_flags_vertical = 1
text = "Here concludes my entry for the Main Menu Madness game jam. I hope you enjoyed and that it felt accurate enough! Go ahead - restart the experience and explore other menus you might've missed!

vlco_o '25 | vlcoo.net"
label_settings = SubResource("LabelSettings_sp1et")
autowrap_mode = 3

[node name="DialogA" parent="." node_paths=PackedStringArray("focus_on_appear") instance=ExtResource("6_8j7ec")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = 104.0
offset_right = 288.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
focus_on_appear = NodePath("HBoxContainer/ButtonRestart")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="DialogA"]
layout_mode = 2
theme_override_constants/separation = -64
alignment = 1

[node name="ButtonRestart" parent="DialogA/HBoxContainer" instance=ExtResource("7_fboau")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Label" parent="DialogA/HBoxContainer/ButtonRestart/TextureBG" index="1"]
text = "Restart"

[node name="ButtonExit" parent="DialogA/HBoxContainer" instance=ExtResource("7_fboau")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
confirm_type = 2

[node name="Label" parent="DialogA/HBoxContainer/ButtonExit/TextureBG" index="1"]
text = "Quit"

[node name="TimerDialog" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="GlobalFader" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[connection signal="pressed" from="DialogA/HBoxContainer/ButtonRestart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="DialogA/HBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="timeout" from="TimerDialog" to="." method="_on_timer_dialog_timeout"]

[editable path="DialogA/HBoxContainer/ButtonRestart"]
[editable path="DialogA/HBoxContainer/ButtonExit"]
